fixed the overflow issue

--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@
 
 .container {
   background-image: url("./img/bgPink.png");
-  background-size: cover; 
-  background-position: center; 
-  overflow: hidden;
+  background-repeat: no-repeat; 
+  background-size: 100% 100%; 
+  background-position: center;
+  overflow: auto;
 }
-
 .navbar {
 
   align-items: center;
@@ -245,7 +245,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  padding-top: 200px;
+  padding-top: 400px;
 }
 
 .githubTitle{
